--- a/chatgpt-data-application/pom.xml
+++ b/chatgpt-data-application/pom.xml
@@ -58,6 +58,20 @@
             <groupId>cn.bugstack</groupId>
             <artifactId>chatglm-sdk-java</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+        </dependency>
+
         <!-- 自身模块 begin -->
         <dependency>
             <groupId>com.gyx</groupId>
