--- a/chatgpt-data-domain/pom.xml
+++ b/chatgpt-data-domain/pom.xml
@@ -63,6 +63,10 @@
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.houbb</groupId>
+            <artifactId>sensitive-word</artifactId>
+        </dependency>
 
 
         <dependency>
