--- a/chatgpt-data-infrastructure/pom.xml
+++ b/chatgpt-data-infrastructure/pom.xml
@@ -25,5 +25,20 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
+        <!-- 自身模块 begin -->
+        <dependency>
+            <groupId>com.gyx</groupId>
+            <artifactId>chatgpt-data-domain</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
